--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_script:
 
 script:
   - docker --version
-  - docker build -t simplicitydevs/ionic-front .
+  - docker build -t $DOCKER_USERNAME/ionic-front .
 
 after_success:
-  - echo "$DOCKER_PASSWORD" | docker login -u "simplicitydevs" --password-stdin
-  - docker push simplicitydevs/ionic-front
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push $DOCKER_USERNAME/ionic-front
